[package]
name = "aoc21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "day9" ]
all = [ "day1",  "day2",  "day3",  "day4",  "day5",  "day6",  "day7",  "day8",  "day9",  "day10", 
        "day11", "day12", "day13", "day14", "day15", "day16", "day17", "day18", "day19", "day20", 
        "day21", "day22", "day23", "day24", "day25"]
complete = [ "day1", "day2", "day3", "day4", "day5", "day6", "day7", "day8", "day9" ]
benchmark = []
use_default = []
day1  = []
day2  = []
day3  = []
day4  = []
day5  = []
day6  = []
day7  = []
day8  = []
day9  = []
day10 = []
day11 = []
day12 = []
day13 = []
day14 = []
day15 = []
day16 = []
day17 = []
day18 = []
day19 = []
day20 = []
day21 = []
day22 = []
day23 = []
day24 = []
day25 = []

[dependencies]
num-traits = "0.2.14"
